cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_233.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:166: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:166:13: Write of unused value
164.               tout0 = tin[0] ^ xor0;
165.               tout1 = tin[1] ^ xor1;
166.               l2nn(tout0, tout1, out, l + 8);
                   ^
167.               xor0 = tin0;
168.               xor1 = tin1;
